# statixbot

./: .gitignore  LICENSE  README.md  maintainers.json  pyproject.toml  statixbot.service
.github/workflows/: add-license.yml
scripts/: add_license.py  install_hook.py
src/: Bot.py  Logging.py  Module.py  __init__.py  __main__.py
src/modules/: help.py  start.py
src/statixbot/: Auth.py  Bot.py  Database.py  Logging.py  Module.py  __init__.py
src/statixbot/modules/: help.py  post.py  start.py  upload.py
statixbot/: Auth.py  Database.py  Module.py  __main__.py
statixbot/modules/: help.py  post.py  start.py  upload.py
