[tool.poetry]
name = "statixbot"
version = "0.1.0"
description = "A Telegram bot written in Python using Pyrogram to ease the workflows of the StatiX team!"
authors = ["Pranaya Deomani <pranayadmn@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StatiXOS/statixbot"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = {git = "https://github.com/KurimuzonAkuma/pyrogram.git", rev = "v2.1.23"}
python-dotenv = "^1.0.1"
python-strtobool = "^1.0.2"
TgCrypto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
