[project]
name = "statixbot"
version = "0.1.0"
description = "A Telegram bot written in Python using Pyrogram to ease the workflows of the StatiX team!"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pranaya Deomani", email = "mail@pranaya.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "kurigram>=2.2.12",
    "python-dotenv>=1.1.1",
    "python-strtobool>=1.0.3",
    "tgcrypto>=1.2.5",
]

[project.urls]
Repository = "https://github.com/StatiXOS/statixbot.git"

[project.scripts]
statixbot = "statixbot:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
